--- a/src/Api/Mediator.csproj
+++ b/src/Api/Mediator.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../MediatorKiller/MediatorKiller.csproj" />
+  </ItemGroup>
+
 </Project>
